src/styles/styles.css
html,
body {
  width: 100%;
  font-size: 62.5%;
  min-height: 100%;
}

body {
  height: 100vh;
}

.content-wrapper {
  width: 100%;
}

.project-background,
.task-background {
  background-color: #577590;
  min-height: 100vh;
}

.task-background {
  background-color: #f9c74f;
}

.overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 0%;
  height: 0%;
}

.blur-overlay {
  width: 100%;
  height: 100%;
  backdrop-filter: blur(2px);
}

.project-title {
  font-family: 'Unica One';
  font-size: 4.8rem;
  color: white;
}

.task-title {
  font-family: 'Unica One';
  font-size: 3rem;
  color: white;
}

.project-header {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
}

.project-logo {
  width: 4.8rem;
  height: 4.8rem;
  padding-left: 2rem;
  padding-top: 2rem;
  padding-right: 2.6rem;
  padding-bottom: 2rem;
}

.project-wrapper,
.task-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (min-width: 802px) {
  .project-wrapper,
  .task-wrapper {
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    flex-shrink: 0;
    flex-wrap: wrap;
    gap: 1rem;
    margin: auto;
  }
}

.project-div,
.task-div {
  background-color: #f8961e;
  width: clamp(31rem, 85vw, 35.6rem);
  height: 6.2rem;
  border-radius: 1rem;
  filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.25));
  margin: 1rem 2rem;
}

.project-div {
  cursor: pointer;
}

.task-div {
  background-color: #43aa8b;
  min-height: 6.2rem;
  height: max-content;
}

.task-flex {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  align-items: center;
}

.task-custom-check {
  height: 2.5rem;
  width: 2.5rem;
  margin-left: 1.3rem;

  border-radius: 0.8rem;
  background-color: #ffffff;
  border: solid 1px rgba(0, 0, 0, 0);
  cursor: pointer;
}

.task-custom-check:hover {
  background-color: #c4c4c4;
}

.task-custom-check-complete {
  height: 2.5rem;
  width: 2.5rem;
  margin-left: 1.3rem;

  border-radius: 0.8rem;
  background-color: #474747;
  background-image: url('../media/check.svg');
  background-size: 2rem 2rem;
  background-repeat: no-repeat;
  background-position: center;
  border: solid 0.1rem rgba(0, 0, 0, 0);
  cursor: pointer;
}

.project-individual-title {
  font-family: 'Overpass';
  font-style: bold;
  font-size: 1.8rem;
  line-height: 2.8rem;
  padding-top: 1rem;
  padding-left: 5rem;
}

.task-individual-title {
  font-family: 'Overpass';
  font-style: bold;
  font-size: 1.6rem;
  line-height: 2.8rem;
  padding-left: 1.3rem;
  margin-top: 0.8rem;
}

.task-individual-title-complete {
  text-decoration: line-through;
}

.task-date {
  font-family: 'Overpass';
  font-style: italic;
  font-size: 1.2rem;
  padding-left: 1.3rem;
}

.project-individual-num-tasks {
  font-family: 'Overpass';
  font-style: italic;
  font-size: 1.2rem;
  padding-left: 5rem;
}

.project-footer-wrapper {
  position: fixed;
  right: 0;
  bottom: 0;
  width: max-content;
  z-index: 1;
}

.project-footer {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.project-add {
  width: 4.8rem;
  height: 4.8rem;
  padding: 2.8rem;
}

.project-add:hover {
  filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.25));
}

.project-footer-modal-wrapper {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.project-modal {
  display: block;
  width: clamp(31rem, 90vw, 35.6rem);
  height: 13rem;
  background-color: #c4c4c4;
  border-radius: 1rem;
  filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.25));
  z-index: 1000;
}

.add-task-modal-wrapper {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.add-task-modal {
  display: block;
  width: clamp(31rem, 90vw, 35.6rem);
  height: 22.2rem;
  background-color: #c4c4c4;
  border-radius: 1rem;
  filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.25));
  z-index: 1000;
}

.project-modal-text-input {
  display: block;
  margin: auto;
  width: 90%;
  margin-top: 3.2rem;
  font-family: 'overpass';
  font-style: italic;
  font-weight: 300;
  font-size: 1.4rem;
  height: 2.5rem;
  border: solid 1px rgba(0, 0, 0, 0);
}

.project-modal-text-input:focus-visible {
  outline: none;
  border: solid 1px #f8961e;
}

.project-modal-button-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.project-modal-button {
  border: none;
  width: 50%;
  margin-top: 3.1rem;
  height: 4.6rem;
  font-size: 1.8rem;
  font-family: 'Unica One';
}

.project-modal-add-button {
  background-color: #90be6d;
  border-bottom-right-radius: 1rem;
}

.project-modal-add-button:hover {
  font-size: 2rem;
  background-color: #7eb356;
}

.project-modal-cancel-button {
  background-color: #f3722c;
  border-bottom-left-radius: 1rem;
}

.project-modal-cancel-button:hover {
  font-size: 2rem;
  background-color: #f86c25;
}

.task-back {
  width: 4.8rem;
  height: 4.8rem;
  padding-left: 2rem;
  padding-top: 2rem;
  padding-right: 2.6rem;
  padding-bottom: 2rem;
}

.task-back:hover {
  filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.25));
}

.task-modal-name-input {
  display: block;
  margin: auto;
  width: 90%;
  margin-top: 2.4rem;
  font-family: 'overpass';
  font-style: italic;
  font-weight: 300;
  font-size: 1.4rem;
  height: 2.5rem;
  border: solid 1px rgba(0, 0, 0, 0);
}

.task-modal-name-input:focus-visible {
  outline: none;
  border: solid 1px #f8961e;
}

.task-modal-desc-input {
  display: block;
  margin: auto;
  width: 90%;
  margin-top: 1.8rem;
  font-family: 'overpass';
  font-style: italic;
  font-weight: 300;
  font-size: 1.4rem;
  height: 5.4rem;
  border: solid 1px rgba(0, 0, 0, 0);
}

.task-modal-desc-input:focus-visible {
  outline: none;
  border: solid 1px #f8961e;
}

.task-modal-date-input {
  height: 2.2rem;
  border: solid 1px rgba(0, 0, 0, 0);

  font-family: 'overpass';
  font-weight: 400;
  font-size: 1.4rem;

  width: 65%;
}

.task-modal-date-input:focus-visible {
  outline: none;
  border: solid 1px #f8961e;
}

.task-modal-priority-input {
  border: none;
  height: 2.2rem;
  border: solid 1px rgba(0, 0, 0, 0);
  font-family: 'overpass';
  font-weight: 400;
  font-size: 1.4rem;
  background-color: #ffffff;
  width: 25%;
}

.task-modal-priority-input:focus-visible {
  outline: none;
  border: solid 1px #f8961e;
}

.task-modal-datepriority-wrapper {
  display: flex;
  width: 90%;
  margin: auto;
  margin-top: 1.8rem;
  justify-content: space-between;
  align-items: center;
}

.delete-task,
.edit-task {
  width: 1.5rem;
  height: 1.5rem;
  background-size: 1.5rem 1.5rem;
  background-repeat: no-repeat;
  background-position: center;
  background-color: transparent;
  border: none;
  margin-left: 0.5rem;
  margin-right: 0px;
  cursor: pointer;
}

.delete-task {
  background-image: url('../media/trash.svg');
  margin-right: 1rem;
}

.edit-task {
  background-image: url('../media/edit.svg');
}

.delete-task:hover,
.edit-task:hover {
  filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.25));
}

.task-data-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.task-button-container {
  display: flex;
  align-items: flex-end;
  border-radius: 0.3rem;
}

.task-title-priority {
  display: flex;
  align-items: center;
}
.task-priority {
  height: 1.8rem;
  width: 1.8rem;
  padding-left: 0.5rem;
}

.task-data-desc-container {
  width: 100%;
}

.task-description {
  font-family: 'Overpass';
  font-size: 1.3rem;
  line-height: 1.3rem;
  margin-left: 0.8rem;
  margin-right: 0.8rem;
  padding-top: 1.2rem;
  display: none;
  width: calc(100% - 1.6rem);
}
.task-creation-date {
  font-family: 'Overpass';
  font-size: 1.2rem;
  font-style: italic;
  line-height: 1.2rem;
  margin-left: 0.8rem;
  margin-right: 0.8rem;
  padding-top: 0.8rem;
  display: none;
  width: calc(100% - 1.6rem);
}

.task-details-button,
.task-hide-details-button {
  background-size: 4rem 1rem;
  width: 4rem;
  height: 1rem;
  background-repeat: no-repeat;
  background-position: center;
  background-color: transparent;
  border: none;
  margin-top: 0.6rem;
  cursor: pointer;
}

.task-details-button {
  background-image: url('../media/arrowdown.svg');
  margin-bottom: 0.4rem;
}

.task-hide-details-button {
  background-image: url('../media/arrowup.svg');
  margin-bottom: 0.2rem;
  display: none;
}

.task-details-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  border-radius: 0.8rem;
}

